# my-game

./: Cargo.toml
src/: main.rs
src/assets/: loader.rs  mod.rs
src/core/: components.rs  mod.rs  states.rs
src/plugins/: combat.rs  menu.rs  mod.rs  world_map.rs
src/save/: mod.rs  serialization.rs
tests/: core_tests.rs
