[package]
name = "my-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3" }
bevy_rand = "0.9"
bevy_egui = "0.33"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
bevy_asset_loader = "0.22.0" # Asset loading
leafwing-input-manager = "0.16.0" # Input handling
bevy_rapier3d = "0.29.0" # Physics engine

# Enable optimizations for dependencies but not for our code in debug mode
[profile.dev.package."*"]
opt-level = 3

# Enable high optimizations for dependencies and our code in release mode
[profile.release]
opt-level = 3
lto = "thin"